examples/bad/undefined_things.soy
_ = a + b; # ERROR

factorial(10); # ERROR